# qai

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
backend/agentbridge/: __init__.py  config.py  git_service.py  main.py  mcp_config.py  protocol.py  sessions.py  skills.py  store.py
backend/agentbridge/agents/: __init__.py  aider.py  base.py  claude_code.py  copilot.py  cursor.py  registry.py
backend/tests/: conftest.py  test_adapters.py  test_claude_interactive.py  test_cursor.py  test_git_service.py  test_mcp.py  test_protocol.py  test_registry.py  test_store.py  test_widget_serving.py  test_ws_e2e.py
widget/: README.md  build.mjs  build.py  package-lock.json  package.json
widget/examples/: plain.html
widget/examples/angular/: agent-bridge.component.ts
widget/examples/react/: AgentBridge.jsx
widget/examples/vue/: AgentBridge.vue
widget/src/: agentbridge-widget.css  agentbridge-widget.js  thread.jsx
widget/test/: smoke.mjs
